mood layout created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/001-smile.png
+    - assets/002-sad.png
+    - assets/012-stress.png
+    - assets/015-shock.png
+    - assets/038-angry.png
+    - assets/042-cool.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
