--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_audio_query: "^0.3.4+1"
+  assets_audio_player: ^1.6.3
+
+
 
 dev_dependencies:
   flutter_test:
