--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,18 +20,22 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+  #Music player
   flutter_audio_query: "^0.3.4+1"
   assets_audio_player: ^1.6.3
+
+  #Firestore
   cloud_firestore: ^0.13.6
 
-
-
+  #Maps
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  google_maps_flutter:
+  flutter_map:
 
 
 # For information on the generic Dart part of this file, see the
